@@ -4,12 +4,14 @@
    Calculate differences between content objects
 """
 
+from zope.i18n import translate
 from zope.interface import implements
 
 import Acquisition
 from Acquisition import aq_base
 from App.class_init import InitializeClass
 from Products.CMFDiffTool.interfaces import IDifference
+from Products.CMFDiffTool import CMFDiffToolMessageFactory as _
 
 class BaseDiff:
     """Basic diff type"""
@@ -17,7 +19,7 @@ class BaseDiff:
     implements(IDifference)
     __allow_access_to_unprotected_subobjects__ = 1
     meta_type = "Base Diff"
-    
+
     def __init__(self, obj1, obj2, field, id1=None, id2=None,
                  field_name=None, field_label=None,schemata=None):
         self.field = field
@@ -32,6 +34,19 @@ class BaseDiff:
         self.id2 = id2
         self.label = field_label or field
         self.schemata = schemata or 'default'
+        fld1 = _getValue(obj1, field, field_name, convert_to_str=False)
+        fld2 = _getValue(obj2, field, field_name, convert_to_str=False)
+        if hasattr(fld1, 'getFilename'):
+            self.oldFilename = fld1.getFilename()
+        else:
+            self.oldFilename = None
+        if hasattr(fld2, 'getFilename'):
+            self.newFilename = fld2.getFilename()
+        else:
+            self.newFilename = None
+        if self.oldFilename is not None and self.newFilename is not None \
+           and self.same:
+            self.same = (self.oldFilename == self.newFilename)
 
     def testChanges(self, ob):
         """Test the specified object to determine if the change set
@@ -42,8 +57,15 @@ class BaseDiff:
         """Update the specified object with the difference"""
         pass
 
+    def filenameTitle(self, filename):
+        """Translate the filename leading text
+        """
+        msg = _(u"Filename: ${filename}",
+                mapping={'filename': filename})
+        return translate(msg)
 
-def _getValue(ob, field, field_name):
+
+def _getValue(ob, field, field_name, convert_to_str=True):
     # Check for the attribute without acquisition.  If it's there,
     # grab it *with* acquisition, so things like ComputedAttribute
     # will work
@@ -64,12 +86,13 @@ def _getValue(ob, field, field_name):
     except (AttributeError, TypeError):
         pass
 
-    # If this is some object, convert it to a string
-    try:
-        if isinstance(value, Acquisition.Implicit):
-            value = str(value)
-    except TypeError:
-        pass
+    if convert_to_str:
+        # If this is some object, convert it to a string
+        try:
+            if isinstance(value, Acquisition.Implicit):
+                value = str(value)
+        except TypeError:
+            pass
 
     return value
 
